# managed_scanning_dashboard

./: README.md
backend_src/: Dockerfile  db.py  docker-compose.yml  init_db.py  main.py  models.py  pyproject.toml
frontend_src/: README.md  index.html  package.json  tailwind.config.ts
frontend_src/src/: App.tsx  index.css
frontend_src/src/components/: AppLayout.tsx  AppSidebar.tsx  AssetsFilters.tsx  AssetsTable.tsx  ScansFilters.tsx  ScansTable.tsx  SeverityBadge.tsx  VulnerabilitiesDisplay.tsx
frontend_src/src/pages/: AssetDetail.tsx  Assets.tsx  ScanDetail.tsx  Scans.tsx
frontend_src/src/services/: scanApi.ts
frontend_src/src/types/: scan.ts
